--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "gshhg-reader"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["Berke DURAK <bd@exhrd.fr>"]
 license = "Apache-2.0 OR MIT"
+readme = "README.md"
 description = "Loader for the binary Wessel and Smith GSHHG shoreline files"
 repository = "https://github.com/berke/gshhg-reader"
 
